Design : Prevent overflow on loading

--- a/style/gallery.less
+++ b/style/gallery.less
@@ -64,7 +64,6 @@
 	&-slider {
 		display: inline-flex;
 		transition: margin-left 0.25s ease-in-out;
-		overflow: hidden;
 
 		&::-webkit-scrollbar {
 			display: none;
